# frax

./: README.md  pyproject.toml  requirements.txt
frax/: auth.py  context.py  hooks.py  mcp.py  modules.txt  oauth.py  prompts.py  tools.py
frax/tools/: __init__.py  app_tools.py  capabilities.py  context.py  core.py  customizations.py  registry.py
