[project]
name = "frax"
authors = [
    { name = "OneHash", email = "engineering@onehash.ai"}
]
description = "Model Context Protocol (MCP) server for ERP automation and AI integration."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "frappe-mcp @ git+https://github.com/sanskar-onehash/frappe-mcp.git@version-16",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
